Fix a few assertions/logs/getters